force-app/main/default/objects/UserLogin_Logs__c/UserLogin_Logs__c.object-meta.xml
<CustomObject>
    <label>UserLogin_Logs</label>
    <nameField>
        <label>UserLogin_Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserLogin_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>