force-app/main/default/objects/UserLogin_Logs__c/fields/CostCenter_L4__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_L4__c</fullName>
    <label>CostCenter Level 4</label>
    <length>255</length>
    <type>Text</type>
</CustomField>