force-app/main/default/objects/UserLogin_Logs__c/fields/CostCenter_L5__c.field-meta.xml
<CustomField>
    <fullName>CostCenter_L5__c</fullName>
    <label>CostCenter Level 5</label>
    <length>255</length>
    <type>Text</type>
</CustomField>