force-app/main/default/objects/UserLogin_Logs__c/fields/DepartmentName__c.field-meta.xml
<CustomField>
    <fullName>DepartmentName__c</fullName>
    <label>Department Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>