force-app/main/default/objects/UserLogin_Logs__c/fields/DivisionName__c.field-meta.xml
<CustomField>
    <fullName>DivisionName__c</fullName>
    <label>Division Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>