force-app/main/default/objects/UserLogin_Logs__c/fields/EpCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>EpCompanyCode__c</fullName>
    <label>EP Company Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>