force-app/main/default/objects/UserLogin_Logs__c/fields/EpCompanyName__c.field-meta.xml
<CustomField>
    <fullName>EpCompanyName__c</fullName>
    <label>EP Company Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>