force-app/main/default/objects/UserLogin_Logs__c/fields/EvEmpNO__c.field-meta.xml
<CustomField>
    <fullName>EvEmpNO__c</fullName>
    <label>EP Employee Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>