force-app/main/default/objects/UserLogin_Logs__c/fields/HistoryId__c.field-meta.xml
<CustomField>
    <fullName>HistoryId__c</fullName>
    <label>History_Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>