force-app/main/default/objects/UserLogin_Logs__c/fields/Id_Username__c.field-meta.xml
<CustomField>
    <fullName>Id_Username__c</fullName>
    <label>Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>