force-app/main/default/objects/UserLogin_Logs__c/fields/LoginTime__c.field-meta.xml
<CustomField>
    <fullName>LoginTime__c</fullName>
    <label>Login_Time</label>
    <type>DateTime</type>
</CustomField>