force-app/main/default/objects/UserLogin_Logs__c/fields/LoginType__c.field-meta.xml
<CustomField>
    <fullName>LoginType__c</fullName>
    <label>Login_Type</label>
    <length>80</length>
    <type>Text</type>
</CustomField>