force-app/main/default/objects/UserLogin_Logs__c/fields/LoginURL__c.field-meta.xml
<CustomField>
    <fullName>LoginURL__c</fullName>
    <label>Login_URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>