force-app/main/default/objects/UserLogin_Logs__c/fields/Position_JikChakNM__c.field-meta.xml
<CustomField>
    <fullName>Position_JikChakNM__c</fullName>
    <label>Company Position</label>
    <length>100</length>
    <type>Text</type>
</CustomField>