force-app/main/default/objects/UserLogin_Logs__c/fields/SourceIp__c.field-meta.xml
<CustomField>
    <fullName>SourceIp__c</fullName>
    <label>SourceIp</label>
    <length>20</length>
    <type>Text</type>
</CustomField>