force-app/main/default/objects/UserLogin_Logs__c/fields/UserCompanyCode__c.field-meta.xml
<CustomField>
    <fullName>UserCompanyCode__c</fullName>
    <label>User_CompanyCode</label>
    <length>80</length>
    <type>Text</type>
</CustomField>