force-app/main/default/objects/UserLogin_Logs__c/fields/UserEmail__c.field-meta.xml
<CustomField>
    <fullName>UserEmail__c</fullName>
    <label>User_Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>