force-app/main/default/objects/UserLogin_Logs__c/fields/UserId__c.field-meta.xml
<CustomField>
    <fullName>UserId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User_Id</label>
    <referenceTo>User</referenceTo>
    <relationshipName>UserLogin_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>