force-app/main/default/objects/UserLogin_Logs__c/fields/UserInfo__c.field-meta.xml
<CustomField>
    <fullName>UserInfo__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>UserInfo_Id</label>
    <referenceTo>UserInfo__c</referenceTo>
    <relationshipLabel>UserLogin_Logs</relationshipLabel>
    <relationshipName>UserLogin_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>