force-app/main/default/objects/UserLogin_Logs__c/fields/UserProfile__c.field-meta.xml
<CustomField>
    <fullName>UserProfile__c</fullName>
    <label>User_Profile</label>
    <length>80</length>
    <type>Text</type>
</CustomField>