force-app/main/default/objects/UserLogin_Logs__c/fields/UserRole__c.field-meta.xml
<CustomField>
    <fullName>UserRole__c</fullName>
    <label>User_Role</label>
    <length>80</length>
    <type>Text</type>
</CustomField>