force-app/main/default/objects/UserLogin_Logs__c/fields/UserType__c.field-meta.xml
<CustomField>
    <fullName>UserType__c</fullName>
    <label>User Type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>