force-app/main/default/objects/UserLogin_Logs__c/fields/WeekNumLogin__c.field-meta.xml
<CustomField>
    <fullName>WeekNumLogin__c</fullName>
    <formula>TEXT(YEAR(DATEVALUE( LoginTime__c )))&amp;&apos;-&apos;&amp;
IF( ((((DATE(YEAR(DATEVALUE(LoginTime__c)), MONTH(DATEVALUE(LoginTime__c))+1,1) - 1) - DATEVALUE(LoginTime__c)) &lt; 4) 
			&amp;&amp; (WEEKDAY(DATEVALUE(LoginTime__c)) &lt; 4) &amp;&amp; (WEEKDAY((DATE(YEAR(DATEVALUE(LoginTime__c)), MONTH(DATEVALUE(LoginTime__c))+1,1)-1)) &lt; 4)),
		(IF(MONTH(DATEVALUE(LoginTime__c))+1 &lt; 10, &apos;0&apos;&amp;TEXT(MONTH(DATEVALUE( LoginTime__c ))+1)&amp;(&apos; W1&apos;), TEXT(MONTH(DATEVALUE( LoginTime__c ))+1)&amp;(&apos; W1&apos;))	),
		(IF (  ((DAY(DATEVALUE(LoginTime__c)) &lt; 4) &amp;&amp; ((WEEKDAY(DATEVALUE(LoginTime__c)) &gt; 4) &amp;&amp; (WEEKDAY(DATE(YEAR(DATEVALUE(LoginTime__c)), MONTH(DATEVALUE(LoginTime__c)), 1)) &gt; 4))),
			   (IF(MONTH(DATEVALUE( LoginTime__c )-1)&lt; 10,&apos;0&apos;&amp;TEXT(MONTH(DATEVALUE( LoginTime__c ))-1),TEXT(MONTH(DATEVALUE( LoginTime__c ))-1)) &amp;
			     (IF(  ( MOD(DAY(DATE(YEAR(DATEVALUE(LoginTime__c)),MONTH(DATEVALUE(LoginTime__c))+1,1)-1),7) &gt; 0 
						&amp;&amp; WEEKDAY(DATE(YEAR(DATEVALUE(LoginTime__c)),MONTH(DATEVALUE(LoginTime__c))-1,1)) &gt; 0 &amp;&amp; WEEKDAY(DATE(YEAR(DATEVALUE(LoginTime__c)),MONTH(DATEVALUE(LoginTime__c))-1,1)) &lt; 5  ),
					   &apos; W5&apos;, &apos; W4&apos;
					)
				 )
			   ),
			   (IF(MONTH(DATEVALUE( LoginTime__c ))&lt; 10,&apos;0&apos;&amp;TEXT(MONTH(DATEVALUE( LoginTime__c ))),TEXT(MONTH(DATEVALUE( LoginTime__c )))) &amp;  
			     (IF( ((WEEKDAY(DATE(YEAR(DATEVALUE(LoginTime__c)), MONTH(DATEVALUE(LoginTime__c)),1)) &gt; 4) || (WEEKDAY(DATE(YEAR(DATEVALUE(LoginTime__c)), MONTH(DATEVALUE(LoginTime__c)),1)) &lt; 3) ),  
				   (&apos; W&apos;&amp;TEXT(FLOOR((DAY(DATEVALUE(LoginTime__c))-(WEEKDAY(DATEVALUE(LoginTime__c))-1))/7)+1)), 
				   (&apos; W&apos;&amp;TEXT( IF( ((DAY(DATEVALUE(LoginTime__c))-(WEEKDAY(DATEVALUE(LoginTime__c))-1)) &lt; 0), 1, (FLOOR((DAY(DATEVALUE(LoginTime__c))-(WEEKDAY(DATEVALUE(LoginTime__c))-1))/7)+2) ) 
								 ) ) )
			     ) 
			   )
			)
		)
  )</formula>
    <label>Week Num Login</label>
    <type>Text</type>
</CustomField>