force-app/main/default/objects/UserLogin_Logs__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>UserName__c</columns>
    <columns>SourceIp__c</columns>
    <columns>LoginTime__c</columns>
    <columns>UserEmail__c</columns>
    <columns>Id_Username__c</columns>
    <columns>CompanyName__c</columns>
    <columns>Position_JikChakNM__c</columns>
    <columns>Title_JikGiubNM__c</columns>
    <columns>CostCenter_L3__c</columns>
    <columns>CostCenter_L4__c</columns>
    <columns>CostCenter_L5__c</columns>
    <columns>EpCompanyName__c</columns>
    <columns>EpCompanyCode__c</columns>
    <columns>EvEmpNO__c</columns>
    <columns>DivisionName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>LoginTime__c</field>
        <operation>greaterOrEqual</operation>
        <value>6/20/2023 9:00 AM</value>
    </filters>
    <label>All</label>
</ListView>